src/test/deca/context/invalid/MethodInvalid.deca
class A{
  //int x;
  int f(){
     int x = f + f;
     //x = 4;
     return f;
  }
}
